hero image on small screens issue v2

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,4 +1,3 @@
-
 #header {
     display: flex;
     justify-content: space-between;
@@ -18,7 +17,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    margin: auto;  /* for mobile screen ?? maybe*/
+    margin: auto;
+    /* for mobile screen ?? maybe*/
 }
 
 .hero-title {
@@ -60,6 +60,11 @@
 @media screen and (max-width: 768px) {
     .hero-title {
         font-size: 26px;
+    }
+
+    .hero {
+        width: 100%;
+        height: 100%;
     }
 
     .hero-button {
